--- a/MyPortfolio/src/styles/index.css
+++ b/MyPortfolio/src/styles/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-image: linear-gradient(0deg, rgba(14, 7, 34, 0.25) 0%, #242424 100%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
