now when u click outside the sidenav it closes, added some text in sidenav, changed padding in go to top btn, added background grandient styles to avoid errors with older versions of the browser & changed size of font btn from presentation

--- a/MyPortfolio/src/styles/Presentation.css
+++ b/MyPortfolio/src/styles/Presentation.css
@@ -48,7 +48,7 @@ h3 img {
 .presentation-button {
     padding: 1rem 2rem;
     font-weight: bolder;
-    font-size: medium;
+    font-size: 1.05rem;
     letter-spacing: 0.3px;
     border-radius: 20px;
 
@@ -124,7 +124,7 @@ h2 p {
     }
 
     .presentation-button {
-        font-size: small;
+        font-size: 0.9rem;
         border: 3px solid transparent;
     }
 }
