--- a/MyPortfolio/src/styles/index.css
+++ b/MyPortfolio/src/styles/index.css
@@ -7,6 +7,11 @@
   color: rgba(255, 255, 255, 0.87);
   background-image: linear-gradient(0deg, rgba(14, 7, 34, 0.25) 0%, #242424 100%);
 
+  /* Alt Backgrounds to avoid errors */
+  background-image: -webkit-linear-gradient(0deg, rgba(14, 7, 34, 0.25) 0%, #242424 100%);
+  background-image: linear-gradient(0deg, rgba(14, 7, 34, 0.25) 0%, #242424 100%);
+  /* Alt Backgrounds to avoid errors */
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
