--- a/MyPortfolio/src/styles/TopNav.css
+++ b/MyPortfolio/src/styles/TopNav.css
@@ -1,3 +1,24 @@
+.div-overlay {
+    opacity: 0;
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+
+    z-index: 999;
+    transition: 500ms;
+}
+
+.div-overlay.show {
+    opacity: 1;
+    width: calc(100% - 200px);
+    visibility: visible;
+}
+
+
 .header {
     display: flex;
     align-items: center;
@@ -50,8 +71,8 @@ a:hover {
 
 .sideNav-div.change {
     padding: 0;
-    transition: 350ms;
-    transform: translate(0, 200px);
+    transition: 400ms;
+    transform: translate(-200px, 0);
 }
 
 .sideNav-div.bottom {
@@ -73,6 +94,11 @@ a:hover {
 
     .sideNav-div {
         display: none;
+    }
+
+    .div-overlay {
+        opacity: 0 !important;
+        visibility: hidden !important;
     }
 }
 
@@ -113,6 +139,7 @@ a:hover {
         top: 0;
 
         padding: 1.2rem;
+        z-index: 1000;
     }
 
     .bar1,
