added jobs section, fixed smth in about me section, started CODE section, finished contact section

--- a/MyPortfolio/src/styles/Contact.css
+++ b/MyPortfolio/src/styles/Contact.css
@@ -136,6 +136,10 @@
     transform: translate(0, -50px);
 }
 
+.no-show {
+    display: none !important;
+}
+
 @media screen and (max-width: 1000px) {
     .contact-container-fotos {
         margin-top: 2rem;
