--- a/MyPortfolio/src/styles/Footer.css
+++ b/MyPortfolio/src/styles/Footer.css
@@ -51,3 +51,13 @@
         font-size: 0.85rem;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .footer-content {
+        flex-direction: column;
+        gap: 1rem;
+
+        margin-top: 1rem;
+        margin-bottom: 4rem;
+    }
+}
