--- a/MyPortfolio/src/styles/Presentation.css
+++ b/MyPortfolio/src/styles/Presentation.css
@@ -38,6 +38,10 @@ h3 img {
 
 .presentation-h3 {
     text-align: center;
+
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
 }
 
 .presentation-btn-div {
