added hr styled to whole app, added skills section with some icons in a new folder, in some files I deleted ';', in forms added autocomplete and id if needed, started studies section with study cards & added sass for scss in skills section

--- a/MyPortfolio/src/styles/App.css
+++ b/MyPortfolio/src/styles/App.css
@@ -91,3 +91,16 @@
     transform: translateY(0);
   }
 }
+
+hr {
+  width: 100%;
+  border: 0;
+  height: 3px;
+  background-image: linear-gradient(to right, transparent, rgba(199, 199, 199, 0.1), transparent);
+}
+
+
+h2 {
+  margin-top: 0;
+  margin-bottom: 2rem;
+}
