added js-confetti foe CV section and loaded cv to files, started mockup of studies section with logos, changed responsive and some styles in about me section, deleted iconRoute from projects section, added resizeHandler for skillCards, topnav now goes into side nav at 1100px due to more sections added

--- a/MyPortfolio/src/styles/Studies.css
+++ b/MyPortfolio/src/styles/Studies.css
@@ -55,3 +55,11 @@ input[type="checkbox"]:checked::after {
     top: 50%;
     transform: translate(-50%, -51%);
 }
+
+.studies-p-info {
+    font-size: 0.85rem;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 2rem;
+    font-style: italic;
+}
