--- a/MyPortfolio/src/styles/AboutMe.css
+++ b/MyPortfolio/src/styles/AboutMe.css
@@ -49,10 +49,31 @@
 .aboutMe-color-3,
 .hover {
     transition: 200ms;
+    font-weight: 600;
 }
 
+.aboutMe-div-p {
+    text-align: justify;
+}
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1000px) {
+
+    .aboutMe-div-p p,
+    .aboutMe-div-p li {
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .aboutMe-flex {
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .aboutMe-myPhoto {
+        height: 320px;
+    }
 
     .aboutMe-div-p p,
     .aboutMe-div-p li {
@@ -60,20 +81,9 @@
     }
 }
 
-@media screen and (max-width: 1000px) {
-
-    .aboutMe-div-p p,
-    .aboutMe-div-p li {
-        font-size: 0.7rem;
-    }
-}
-
-@media screen and (max-width: 750px) {
-    .aboutMe-flex {
-        flex-wrap: wrap;
-    }
-
-    .aboutMe-myPhoto {
-        height: 320px;
+@media screen and (max-width: 600px) {
+    .aboutMe-dots {
+        flex-direction: column;
+        gap: 1rem;
     }
 }
