--- a/MyPortfolio/src/styles/Scroller.scss
+++ b/MyPortfolio/src/styles/Scroller.scss
@@ -8,7 +8,10 @@
         display: flex;
         gap: 2rem;
         padding: 1rem 0;
+        pointer-events: auto;
     }
+
+    pointer-events: none;
 
     &[data-animated="true"] {
         --webkit-mask: linear-gradient(
@@ -159,21 +162,6 @@
     place-items: center;
 }
 
-#btn-show-cards {
-    padding: 1rem 2rem;
-    border-radius: 10px;
-    border: 0;
-    background-color: #7660b5;
-    cursor: pointer;
-    font-size: 1.5rem;
-
-    &:hover {
-        background-color: #9775fa;
-    }
-
-    transition: 300ms;
-}
-
 .panel {
     overflow: hidden;
     transition: max-height 2s ease-in-out;
@@ -223,5 +211,37 @@
 
     .skills-cards-normal {
         gap: 0.5rem;
+    }
+}
+
+#btn-show-cards {
+    cursor: pointer;
+    position: relative;
+    background-color: transparent;
+    border: none;
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+    transition: background-color 300ms;
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-style: solid;
+        border-width: 0 27px 36px 27px;
+        border-color: transparent transparent #7660b5 transparent;
+        transition: border-color 300ms;
+        transition: 0.7s ease;
+    }
+
+    &:hover::after {
+        border-color: transparent transparent #bca6ff transparent;
+    }
+
+    &.down::after {
+        transform: translate(-50%, -50%) rotate(180deg);
+        transition: 0.7s ease;
     }
 }
