--- a/MyPortfolio/src/styles/index.css
+++ b/MyPortfolio/src/styles/index.css
@@ -24,6 +24,8 @@ body {
 
   max-width: 1280px;
   overflow-x: hidden;
+
+  pointer-events: auto !important;
 }
 
 @media screen and (max-width: 1000px) {
@@ -37,6 +39,10 @@ main {
   flex-direction: column;
 
   gap: 20px;
+}
+
+a {
+  pointer-events: auto !important;
 }
 
 /* SCROLLBAR STYLES */
