--- a/MyPortfolio/src/styles/CV.css
+++ b/MyPortfolio/src/styles/CV.css
@@ -71,7 +71,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     cursor: pointer;
 }
 
@@ -85,7 +85,7 @@
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    max-width: 800px;
 }
 
 .modal-last-p {
