--- a/MyPortfolio/src/styles/AboutMe.css
+++ b/MyPortfolio/src/styles/AboutMe.css
@@ -1,7 +1,7 @@
 .aboutMe-flex {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: stretch;
 
     gap: 3rem;
 }
@@ -10,6 +10,8 @@
     height: 440px;
     border-radius: 20px;
     filter: drop-shadow(0 0 0.5rem rgb(56, 56, 56));
+
+    margin-top: 1.2rem;
 }
 
 .aboutMe-dots {
@@ -56,17 +58,30 @@
     text-align: justify;
 }
 
+@media screen and (max-width: 1200px) {
+    .aboutMe-dots {
+        flex-direction: column;
+        gap: 0.6rem;
+    }
+}
+
 @media screen and (max-width: 1000px) {
+    .aboutMe-flex {
+        flex-wrap: wrap;
+    }
 
     .aboutMe-div-p p,
     .aboutMe-div-p li {
         font-size: 0.9rem;
     }
-}
 
-@media screen and (max-width: 900px) {
-    .aboutMe-flex {
-        flex-wrap: wrap;
+    .aboutMe-dots {
+        flex-direction: row;
+        gap: 0;
+    }
+
+    .aboutMe-myPhoto {
+        margin-top: 0;
     }
 }
 
