--- a/MyPortfolio/src/styles/Contact.css
+++ b/MyPortfolio/src/styles/Contact.css
@@ -13,6 +13,7 @@
     color: #8A6BE3;
     font-size: 1.08rem;
 
+    max-width: 800px;
 }
 
 .form-container {
@@ -83,9 +84,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 1.2rem;
 
-    margin-top: 4rem;
+    margin-top: 2rem;
 }
 
 .contact-container-fotos a {
@@ -116,7 +117,6 @@
     background-color: #7660B5;
     border-radius: 5px;
     padding: 0 10px;
-    z-index: 1;
     text-align: center;
     color: #fff;
     opacity: 0;
@@ -158,4 +158,40 @@
     .contact-container-fotos a:hover .email-tooltip {
         transform: translate(-80px, -50px);
     }
+}
+
+.link-CV-Container {
+    display: grid;
+    place-items: center;
+    margin: 2rem 0;
+    margin-bottom: 0 !important;
+}
+
+.link-CV-Container a {
+    font-weight: 700;
+    transition: 300ms;
+    padding: 0 1rem;
+
+    opacity: 0.7;
+
+    color: inherit;
+    text-decoration: none;
+
+    white-space: nowrap;
+    font-stretch: normal;
+
+    scroll-margin-top: 50px;
+}
+
+.link-CV-Container a:hover {
+    color: #7660B5;
+    letter-spacing: 0.05rem;
+    padding: 0 0.7rem;
+
+    opacity: 1;
+
+    filter: drop-shadow(0 0 10px rgba(118, 96, 181, 0.5));
+
+    cursor: pointer;
+    transition: 300ms;
 }
