--- a/MyPortfolio/src/styles/Scroller.scss
+++ b/MyPortfolio/src/styles/Scroller.scss
@@ -1,7 +1,7 @@
 .skills-scroller {
     max-width: 1000px;
     margin: 0 auto;
-    overflow: hidden;
+    // overflow: hidden;
     white-space: nowrap;
 
     &__inner {
