added overflow in scroller.scss because of bugs, added responsive to studies section

--- a/MyPortfolio/src/styles/Studies.css
+++ b/MyPortfolio/src/styles/Studies.css
@@ -63,3 +63,8 @@ input[type="checkbox"]:checked::after {
     margin-bottom: 2rem;
     font-style: italic;
 }
+
+.mouseIcon {
+    height: 15px;
+    opacity: 0.7;
+}
