--- a/MyPortfolio/src/styles/StudyCard.css
+++ b/MyPortfolio/src/styles/StudyCard.css
@@ -41,7 +41,7 @@
 
 .studyCard-header-titles h3 {
     font-weight: bolder;
-    font-size: 1.45rem;
+    font-size: 1.7rem;
 }
 
 .studyCard-header-titles h4 {
@@ -56,7 +56,13 @@
     text-align: justify;
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 1000px) {
+    .studyCard-header-titles h3 {
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 850px) {
     .studyCard-header {
         flex-direction: column;
         align-items: start;
