--- a/MyPortfolio/src/styles/StudyCard.css
+++ b/MyPortfolio/src/styles/StudyCard.css
@@ -30,13 +30,22 @@
 }
 
 .studyCard-header img {
-    height: 120px;
-    border-radius: 50%;
+    height: 140px;
+    border-radius: 10px;
+    border: 0;
 }
 
 .studyCard-header-titles {
     text-align: end;
     width: 100%;
+}
+
+.studyCard:nth-child(even) .studyCard-header {
+    flex-direction: row-reverse;
+}
+
+.studyCard:nth-child(even) .studyCard-header-titles {
+    text-align: start;
 }
 
 .studyCard-header-titles h3 {
@@ -56,21 +65,26 @@
     text-align: justify;
 }
 
+@media screen and (max-width: 1100px) {
+    .studyCard {
+        width: 75%;
+    }
+
+}
+
 @media screen and (max-width: 1000px) {
+    .studyCard {
+        width: 80%;
+    }
+
     .studyCard-header-titles h3 {
         font-size: 1.5rem;
     }
 }
 
 @media screen and (max-width: 850px) {
-    .studyCard-header {
-        flex-direction: column;
-        align-items: start;
-        gap: 0.6rem;
-    }
-
-    .studyCard-header-titles {
-        text-align: left;
+    .studyCard-header img {
+        height: 120px;
     }
 
     .studyCard-header img {
@@ -79,17 +93,28 @@
     }
 
     .studyCard {
-        width: 70%;
+        width: 90%;
     }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 550px) {
+    .studyCard-header img {
+        height: 100px;
+    }
+    
+    .studyCard-header,
+    .studyCard:nth-child(even) .studyCard-header {
+        flex-direction: column;
+        align-items: start;
+        gap: 0.6rem;
+    }
+
     .studyCard-text p {
         font-size: 0.85rem;
     }
 
-    .studyCard {
-        width: 80%;
+    .studyCard-header-titles {
+        text-align: center !important;
     }
 
     .studyCard-header-titles h3 {
@@ -102,5 +127,11 @@
 
     .studyCard-header-titles .h4-alt {
         text-align: end;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .studyCard-header-titles .h4-alt {
+        font-size: 0.8rem;
     }
 }
